--- a/index.css
+++ b/index.css
@@ -62,20 +62,20 @@ html, body {
     vertical-align: middle;
 }
 .wrapper .top-nav-wrap .top-nav .bg-pic.xsj-pic {
-    background: url('./img/xsj.png');
+    background: url('./images/xsj.png');
 }
 .wrapper .top-nav-wrap .top-nav .bg-pic.shopCar-pic {
-    background: url('./img/gwc.png');
+    background: url('./images/gwc.png');
     width: 12px;
     height: 12px;
 }
 .wrapper .top-nav-wrap .top-nav .bg-pic.like-pic {
-    background: url('./img/star.png');
+    background: url('./images/star.png');
     width: 12px;
     height: 12px;
 }
 .wrapper .top-nav-wrap .top-nav .bg-pic.web-nav-pic {
-    background: url('./img/dh.png');
+    background: url('./images/dh.png');
     width: 8px;
     height: 8px;
 }
@@ -102,7 +102,7 @@ html, body {
     display: inline-block;
     width: 190px;
     height: 105px;
-    background-image: url('./img/logo.png');
+    background-image: url('./images/logo.png');
     background-size: 100% 100%;
 }
 .wrapper .search-wrap .search-con .search-box {
@@ -197,7 +197,7 @@ html, body {
     height: 14px;
     top: 11px;
     left: 14px;
-    background-image: url('./img/fdj.png');
+    background-image: url('./images/fdj.png');
     background-size: 100% 100%;
 }
 .wrapper .search-wrap .search-con .search-box .camera {
@@ -205,7 +205,7 @@ html, body {
     height: 20px;
     top: 11px;
     right: 90px;
-    background-image: url('./img/camera.png');
+    background-image: url('./images/camera.png');
     background-size: 100% 100%;
 }
 .wrapper .search-wrap .search-con .search-box .search-bl {
@@ -240,7 +240,7 @@ html, body {
     display: inline-block;
     width: 62px;
     height: 62px;
-    background: url('./img/ewm.png') no-repeat;
+    background: url('./images/ewm.png') no-repeat;
     background-size:  100% 100%;
     margin-left: 6px;
 }
@@ -291,7 +291,7 @@ html, body {
     display: block;
     width: 30px;
     height: 30px;
-    background: url('./img/up.png') no-repeat;
+    background: url('./images/up.png') no-repeat;
     background-size: center;
     position: absolute;
     top: -10px;
@@ -363,7 +363,7 @@ html, body {
     right: 10px;
     top: 50%;
     margin-top: -4px;
-    background: url('./img/yjt.png');
+    background: url('./images/yjt.png');
     background-size: 100% 100%;
 }
 .wrapper .screen-box .main .main-inner .inner-content {
@@ -475,7 +475,7 @@ html, body {
 }
 .wrapper .screen-box .main .main-bottom .content .more span,
 .wrapper .screen-box .col-right .app h3 .more span {
-    background: url('./img/yjt.png');
+    background: url('./images/yjt.png');
     background-size: 100% 100%;
     display: inline-block;
     width: 4px;
@@ -486,7 +486,7 @@ html, body {
 .wrapper .screen-box .main .main-bottom .content .logo-box {
     width: 180px;
     height: 74px;
-    background-image: url('./img/tbtt.png');
+    background-image: url('./images/tbtt.png');
     background-size: 100% 100%;
 }
 
@@ -499,7 +499,7 @@ html, body {
 .wrapper .screen-box .col-right .member {
     width: 290px;
     height: 132px;
-    background-image: url('./img/bg.png');
+    background-image: url('./images/bg.png');
     background-size: 100% 100%;
     margin-top: 10px;
 }
@@ -517,7 +517,7 @@ html, body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-image: url('./img/tx.jpg');
+    background-image: url('./images/tx.jpg');
     background-size: 100% 100%;
 }
 .wrapper .screen-box .col-right .member .member-head .info {
@@ -553,7 +553,7 @@ html, body {
     height: 16px;
     top: 0;
     left: 0;
-    background-image: url('./img/pics.png');
+    background-image: url('./images/pics.png');
 }
 .wrapper .screen-box .col-right .member .member-head p a.icon span {
     background-position: 0 -572.5px;
@@ -604,7 +604,7 @@ html, body {
     position: absolute;
     top: 9px;
     right: 25px;
-    background-image: url('./img/ysj.png');
+    background-image: url('./images/ysj.png');
     background-size: 100% 100%;
 }
 .wrapper .screen-box .col-right .notice {
@@ -683,7 +683,7 @@ html, body {
     display: inline-block;
     width: 24px;
     height: 24px;
-    background: url('./img/pics.png');
+    background: url('./images/pics.png');
     margin-top: 10px;
 }
 .wrapper .screen-box .col-right .module ul li a p {
